# vicon_twist

./: CMakeLists.txt  README.md  package.xml
include/: so3_utils.h
launch/: crazy.launch  vicon_twist.launch
src/: main.cpp  main_crazy.cpp
